MainLayout: fix nav arrow visible in pc

--- a/src/containers/App/index.scss
+++ b/src/containers/App/index.scss
@@ -1,21 +1,3 @@
-@keyframes arrow-rotate-down {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(180deg);
-  }
-}
-
-@keyframes arrow-rotate-up {
-  from {
-    transform: rotate(180deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .app {
   &__header {
     height: 80px;
@@ -71,11 +53,8 @@
 
   &__nav-btn {
     cursor: pointer;
-    animation-name: arrow-rotate-up;
-    animation-duration: 0.3s;
-    animation-fill-mode: both;
     &--expand {
-      animation-name: arrow-rotate-down;
+      transform: rotate(180deg);
     }
   }
 }
